# C-logger

./: CMakeLists.txt  LICENSE  README.md
docs/: CMakeLists.txt  Doxyfile.in
include/: logger.h
lib/: CMakeLists.txt
